--- a/wear/css/style.css
+++ b/wear/css/style.css
@@ -14,7 +14,7 @@
               
 
         #wear_container{
-           position: absolute;
+            position: absolute;
             left: 0;
             right: 0;
             top: 0;
@@ -25,66 +25,95 @@
           
         } 
       
-        #hat{
+   
+          #outerwear{
            position: absolute;
            top:0;
            width: 100%;
            height: 20%;
            border-bottom: 6px solid #003E6B;  
+              
+          
         }
-          #outerwear{
+          #top{
            position: absolute;
            top:20%;
            width: 100%;
            height: 20%;
            border-bottom: 6px solid #003E6B;
+           
         }
-          #top{
+          #bottom{
            position: absolute;
            top:40%;
            width: 100%;
            height: 20%;
            border-bottom: 6px solid #003E6B;
+              
+           
         }
-          #bottom{
+          #acc{
            position: absolute;
            top:60%;
            width: 100%;
            height: 20%;
-           border-bottom: 6px solid #003E6B;  
+           border-bottom: 6px solid #003E6B;
         }
-          #footwear{
-           position: absolute;
-           top:80%;
-           width: 100%;
-           height: 20%;
-           border-bottom: 6px solid #003E6B;  
-        }
+
         .wearP{
             position: relative;
             bottom:-20px;
             font-size: 30px;
-            float: right;
+            text-align: center;
         }
         
-        #hat_img{
-            position: absolute;
-            background-color: darkslategray;
-            background-image: url(https://daks2k3a4ib2z.cloudfront.net/588249220800d83a0710ac2b/5a05c7a212148e000158d7a9_cloud-computing-icon-pivotal-it.svg);
-            width: 50px;
-            height: 50px;
-            bottom:10px;
-            right: 0;
+        #outerwear_img{
+            position: relative;
+            background-image: url(../img/outerwear.png);
+            background-size: contain;
+            background-repeat: no-repeat;
+            float: left;
+            width: 80px;
+            height:80px;
+            top: 5px;
             z-index: 3;
         }
-        #outerwear_img{
-            position: absolute;
-            background-color: darkslategray;
-            background-image: url(https://image.flaticon.com/icons/svg/146/146204.svg);
-            width: 50px;
-            height: 50px;
-            bottom:10px;
-            right: 0;
+        #topwear_img{
+            position: relative;
+            background-image: url(../img/shirt.png);
+            background-size: contain;
+            background-repeat: no-repeat;
+            float: left;
+            width: 90px;
+            height:70px;
+            top: 14px;
             z-index: 3;
-        }     
-  
+        }
+
+        #bottomwear_img{
+            position: relative;
+            background-image: url(../img/pants.png);
+            background-size:contain;
+            background-repeat: no-repeat;
+            float: left;
+            left: 20px;
+            width: 90px;
+            height:70px;
+            top: 14px;
+            z-index: 3;
+        } 
+
+        #acc_img{
+            position: relative;
+            background-image: url(../img/acc.png);
+            background-size:contain;
+            background-repeat: no-repeat;
+            float: left;
+            left: 10px;
+            width: 90px;
+            height:70px;
+            top: 30px;
+            z-index: 3;
+        }
+
+
