--- a/main/css/style.css
+++ b/main/css/style.css
@@ -2,6 +2,11 @@
            overflow:hidden;  
           
         }
+
+button:focus {
+    outline:none;
+}
+
 @font-face{
     font-family: MyriadPro;  
     src: url(../fonts/Myriad/Myriad-Pro-Regular.ttf);
