--- a/main/css/style.css
+++ b/main/css/style.css
@@ -536,8 +536,21 @@ button:focus {
             z-index: 3;
 
         }     
+
+/* ---------------- checkTravel --------------------  */
+
+ #checkTravel{
+           position: absolute;
+           background-color:#ebebeb; 
+            top:18%;
+            width: 100%;
+            height: 16%;
+           display: none;  
+        }
               
- /* ---------------- header2 --------------------  */             .header2{ 
+ /* ---------------- header2 --------------------  */             
+
+.header2{ 
         
             position: absolute;
             top: 34%;
