--- a/main/css/style.css
+++ b/main/css/style.css
@@ -1201,7 +1201,7 @@ button:focus {
             
              width: 50px;
             height: 50px;
-              background-image: url(http://www.clker.com/cliparts/y/m/X/o/s/R/down-arrow-circle-hi.png);
+            background-image: url(http://www.pngmart.com/files/3/Down-Arrow-PNG-Pic.png);
             background-size: cover;
             background-repeat: no-repeat;
         }
