--- a/main/css/style.css
+++ b/main/css/style.css
@@ -1,6 +1,5 @@
        body{
            overflow:hidden;  
-          
         }
 
 button:focus {
@@ -40,8 +39,9 @@ button:focus {
             background-color:#003E6B;
             width: 100%;
             height: 100%;
+          
             overflow: auto;
-            
+           
             
         }    
         
@@ -49,15 +49,17 @@ button:focus {
             position: absolute;
             top: 0;
             left: 0;
+            right: 0;
+            margin: auto;
             background-color:#003E6B;
-            width: 100%;
+            width: 980px;
             height: 5000px;
         }
         .home_container{
             position: absolute;
             top: 0;
             left: 0;
-            background-image: url(https://static.pexels.com/photos/37728/pexels-photo-37728.jpeg);
+            background-image: url(https://static.pexels.com/photos/443356/pexels-photo-443356.jpeg);
             background-size: cover;
             background-repeat: no-repeat;
             width: 100%;
@@ -102,7 +104,7 @@ button:focus {
             right: 0;
             bottom: 0;
             text-align: center;
-            font-size: 70px;
+            font-size: 45px;
             margin: auto;     
             
             
@@ -168,23 +170,28 @@ button:focus {
         
 /* ---------------- navigation --------------------  */
          .navigationMouseover {  
-           position:fixed;
-            left: 0px;
+            position:fixed;  
+            margin:0 auto;  
+            left:auto;  
+            right:auto; 
             top: 0px;
-             width: 100%;
+            margin: auto;
+            width: 980px;
             height: 10%;
             opacity: 0;
-             float: left;
-             z-index: 990;
+            float: left;
+            z-index: 990;
         }
         
         
          .navigation {
              
-           position:fixed;
-            left: 0px;
+            position:fixed;  
+            margin:0 auto;  
+            left:auto;  
+            right:auto; 
             top: -10%;
-             width: 100%;
+            width: 980px;
             height: 10%;
             background: rgba(255, 255, 255, 0.8);
              float: left;
@@ -450,8 +457,8 @@ button:focus {
             width: 25%;
             height: 40%;
           
-                background-image: url(../img/rainCoin.png);
-               background-size: cover;
+                background-image: url(../img/logo2.png);
+               background-size:contain;
             background-repeat: no-repeat;   
         }
     
@@ -527,6 +534,7 @@ button:focus {
         }
         #temperImg1{
             position: absolute;
+           
            background-size:contain;
             background-repeat: no-repeat;
             width: 50px;
@@ -558,7 +566,7 @@ button:focus {
             background-color: white;
             width: 100%;
             height: 8%;
-     background-image: url(https://static.pexels.com/photos/110874/pexels-photo-110874.jpeg);
+     background-image: url(https://cdn.pixabay.com/photo/2016/11/01/06/37/aerial-1787516_1280.jpg);
      background-size: cover;
      background-repeat: no-repeat;
         }     
