--- a/main/css/style.css
+++ b/main/css/style.css
@@ -29,6 +29,47 @@ button:focus {
    src: url(../fonts/roboto/Roboto-Thin.ttf);   
      }
 
+@media only screen and (max-device-width:1024px) {
+.weatherDrobe_container{
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            background-color:#003E6B;
+            width: 100%;
+            height: 5000px;
+        }
+.navigationMouseover {  
+            position:fixed;  
+            margin:0 auto;  
+            left:auto;  
+            right:auto; 
+            top: 0px;
+            margin: auto;
+            width: 100%;
+            height: 10%;
+            opacity: 0;
+            float: left;
+            z-index: 990;
+        }
+        
+        
+ .navigation {
+
+     position:fixed;  
+     margin:0 auto;  
+     left:auto;  
+     right:auto; 
+     top: -10%;
+     width: 100%;
+     height: 10%;
+     background: rgba(255, 255, 255, 0.8);
+     float: left;
+     z-index: 999;
+}
+}
+
 
 
 
