--- a/main/css/style.css
+++ b/main/css/style.css
@@ -496,6 +496,66 @@ position: absolute;
             margin: auto;       
         }
 
+/*----------------Wear Toggle---------------------------*/
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  z-index: 1;
+  left: 45%;
+    
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: gainsboro;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: white;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px white;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
  /* ---------------- checkWeather --------------------  */
 
 
@@ -592,7 +652,7 @@ position: absolute;
             left: 0;
             z-index: 3;
         }
-        #hatIcon{
+        #outwearIcon{
            background-image: url("../img/wearIcon/accessories.png");  
         } 
         #shirtIcon{
