--- a/main/css/style.css
+++ b/main/css/style.css
@@ -1,5 +1,8 @@
        body{
            overflow:hidden;  
+           -moz-user-select: none;
+            -khtml-user-select: none;
+            user-select: none;
         }
 
 button:focus {
@@ -36,7 +39,8 @@ button:focus {
              position: absolute;
             top: 0;
             left: 0;
-            background-color:#003E6B;
+           
+            background-color:#fff;
             width: 100%;
             height: 100%;
           
@@ -217,8 +221,12 @@ button:focus {
             height: 50px;
             background-image: url("../img/logo2.png");
             background-size:contain;
-            background-repeat: no-repeat;   
+            background-repeat: no-repeat; 
+            -webkit-transition-duration:1s;
         }
+        .logoDiv:hover{
+           transform:scale(1.2);
+           }
         .homeBut{
             position: absolute;
             left: 0px;
@@ -519,6 +527,7 @@ position: absolute;
   background-color: black;
   -webkit-transition: .4s;
   transition: .4s;
+ 
 }
 
 .slider:before {
@@ -531,10 +540,16 @@ position: absolute;
   background-color: gainsboro;
   -webkit-transition: .4s;
   transition: .4s;
+   background-image: url(../img/wearIcon/FIcon.png);
+    background-size: cover;
+    background-repeat: no-repeat  
 }
+
+
 
 input:checked + .slider {
   background-color: white;
+   
 }
 
 input:focus + .slider {
@@ -545,6 +560,9 @@ input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
+       background-image: url(../img/wearIcon/MIcon.png);
+    background-size: cover;
+    background-repeat: no-repeat 
 }
 
 /* Rounded sliders */
@@ -639,11 +657,15 @@ input:checked + .slider:before {
             bottom:10px;
             right: 0;
             z-index: 3;
+            -webkit-transition-duration:0.1s; 
         }
+       .wearImg:hover {
+           transform:scale(1.2);
+           }
         .wearicon
         {
             position: absolute;
-            background-image: url("https://marketplace.canva.com/MAB5nccL-pw/1/thumbnail/canva-arrow-MAB5nccL-pw.png");
+            background-image: url("");
             background-size: 50px;
             background-repeat: no-repeat;
             width: 50px;
@@ -917,19 +939,20 @@ input:checked + .slider:before {
             background-color: #ebebeb;
             color: black;
             margin-top: -20px; 
-            height: 140%; 
+            height: 142%; 
         }
+ 
           .wearBut:hover {
             background-color: #ebebeb;
             color: black;
             margin-top: -20px; 
-            height: 140%; 
+            height: 142%; 
         }
           .travelBut:hover {
             background-color: #ebebeb;
             color: black;
             margin-top: -20px; 
-            height: 140%;  
+            height: 142%;  
         }    
         
     /* ---------------- header2 --------------------  */       
@@ -1059,7 +1082,8 @@ input:checked + .slider:before {
            top: 0;
             left: 0;
            margin: auto;
-           background-color: #004a9d;
+           background-color: #3b455f;
+         -webkit-transition-duration:0.1s;
         }
               .suggestion_right{
              position: absolute;
@@ -1069,8 +1093,25 @@ input:checked + .slider:before {
            top: 0;
             right: 0;
            margin: auto;
-           background-color: #004a9d;
+           background-color: #3b455f;
+          -webkit-transition-duration:0.1s;
         }
+            .suggestion_left:hover {
+           transform:scale(1.1);
+           }
+            .suggestion_right:hover {
+           transform:scale(1.1);
+           }
+
+        .suggestion_right:active {
+            transform: translateY(1px);
+            transform: translateX(1px);
+        }
+        .suggestion_left:active {
+            transform: translateY(1px);
+            transform: translateX(1px);
+        }
+
             .suggestion_leftImg{
              position: absolute;
              width: 50px;  
@@ -1237,7 +1278,8 @@ input:checked + .slider:before {
            top: 0;
             left: 0;
            margin: auto;
-           background-color: #004a9d;
+           background-color: #3b455f;
+            -webkit-transition-duration:0.1s;
         }
               .travel_right{
              position: absolute;
@@ -1247,8 +1289,24 @@ input:checked + .slider:before {
            top: 0;
             right: 0;
            margin: auto;
-           background-color: #004a9d;
+           background-color: #3b455f;
+           -webkit-transition-duration:0.1s;
         }
+        .travel_left:hover {
+           transform:scale(1.1);
+           }
+        .travel_right:hover {
+           transform:scale(1.1);
+           }
+        .travel_left:active {
+            transform: translateY(1px);
+            transform: translateX(1px);
+        }
+        .travel_right:active {
+            transform: translateY(1px);
+            transform: translateX(1px);
+        }
+
             .travel_leftImg{
              position: absolute;
              width: 50px;  
@@ -1426,7 +1484,7 @@ input:checked + .slider:before {
             right: 10%;
                top:0;
             margin: auto;  
-        
+            -webkit-transition-duration:0.1s;
            
             width: 50px;
             height: 50px;
@@ -1434,66 +1492,194 @@ input:checked + .slider:before {
             background-size:contain;
             background-repeat: no-repeat;
            }
+
+         .footer2_logo:hover {
+           transform:scale(1.2);
+           }
         
         .downArrow{
             
           position: absolute;
             bottom: 3%;
             right: 3%;
-            
+            vertical-align: middle;
+            -webkit-transition-duration:0.1s;
              width: 50px;
             height: 50px;
-            background-image: url(http://www.pngmart.com/files/3/Down-Arrow-PNG-Pic.png);
-            background-size: cover;
+            background-image: url(../img/downArrow.png);
+            background-size:contain;
             background-repeat: no-repeat;
         }
+            .downArrow:hover {
+           transform:scale(1.2);
+           }
+
+
         .upArrow
         {
             
           position: absolute;
             bottom: 3%;
             right: 3%;
-            
+            -webkit-transition-duration:0.1s;
              width: 50px;
             height: 50px;
-              background-image: url(https://nutsandboltsspeedtraining.com/wp-content/themes/knowall-child/UpArrow.svg);
+              background-image: url(../img/upArrow.png);
             background-size: cover;
             background-repeat: no-repeat;
         }
+.upArrow:hover {
+           transform:scale(1.2);
+           }
 
+       
 /* ---------------- Travel Tab --------------------  */
 
-        #map {
-        height: 60%;
-        width: 60%;
-        position: absolute;
-        top: 10%;
-        left: 3%;
-      }
-
-        #resultDiv {
-            
-            width: 30%;
+             .mapDiv{
+            position: absolute;
+            left: 5%;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            width: 35%;
             height: 60%;
-            position:absolute;
-            top: 10%;
-            right: 3%;
+            background-color: #f1f1f1;  
         }
-        
-        #poiDiv {
-            border: 2px solid black;
+        .mapImg{
+            position: absolute;
+            left: 0;
+            top: 0;
             width: 100%;
-            height: 20%;
+            height: 88%;
+            background-image: url("https://www.wired.com/wp-content/uploads/2016/11/GoogleMapTA.jpg");    
+        }
+        .mapFooter{
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 12%;
+            background-color: #000;     
+        }
+        .mapFooterBut{
+            position: absolute;
+      
+            width: 40%;
+            height: 30%;
+            top:0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
             
         }
+      .mapFooterLogo{
+            position: absolute;
+            left: 0;
+            bottom: 0;
+          top:0;
+          margin: auto;
+            width: 50px;
+            height: 40px;
         
-        #poiDiv:hover {
-            background-color:aqua;
+          background-image: url(../img/logo.png);
+          background-size: contain;
+          background-repeat: no-repeat;
         }
-    
-        @keyframes hoverAnimate {
-            
+        .mapFooterP{
+          position: absolute;
+            bottom:0;
+            top:0;
+            margin: auto;
+            right: 0;
+            font-size: 15px;
+            color: white;
+            font-family: RobotoThin;
+            font-weight: bold;
         }
+
+       
+        
+        .travelDiv{
+            position: absolute;
+            right: 10%;
+            top: 5%;
+         
+            margin: auto;
+            width: 45%;
+            height: 80%;  
+        } 
+
+      
+        .travelDiv1{
+             
+           position: absolute;
+           top:0;
+           width: 100%;
+           height: 20%;
+           border-bottom: 6px solid #000;  
+        }
+          .travelDiv2{
+           position: absolute;
+           top:20%;
+           width: 100%;
+           height: 20%;
+           border-bottom: 6px solid #000;  
+        }
+          .travelDiv3{
+           position: absolute;
+           top:40%;
+           width: 100%;
+           height: 20%;
+           border-bottom: 6px solid #000;  
+        }
+          .travelDiv4{
+           position: absolute;
+           top:60%;
+           width: 100%;
+           height: 20%;
+           border-bottom: 6px solid #000;  
+        }
+          .travelDiv5{
+           position: absolute;
+           top:80%;
+           width: 100%;
+           height: 20%;
+           border-bottom: 6px solid #000;  
+        }
+        .travelP{
+            font-size: 20px;
+            font-family: MontserratRegular;
+            position: absolute;
+            bottom:0;
+            width: 85%;
+            height: 25px;
+            overflow: hidden;
+            left:0;
+        }
+        .travelNum{
+            position: absolute;
+            bottom:-20px;
+            font-size: 30px;;
+            right: 15px;
+        }
+     
+        .travelImg{
+            position: absolute;
+            background-image: url(../img/arrow.png);
+            background-size: 50px;
+            background-repeat: no-repeat;
+            width: 50px;
+            height: 50px;
+            bottom:10px;
+            right: 0;
+            z-index: 3;
+            -webkit-transition-duration:0.1s;
+        }
+        .travelImg:hover {
+           transform:scale(1.2);
+           }
+        
 
 
 
@@ -1578,3 +1764,6 @@ input:checked + .slider:before {
      z-index: 999;
 }
 }
+
+
+
