--- a/main/css/style.css
+++ b/main/css/style.css
@@ -811,7 +811,19 @@ input:checked + .slider:before {
             height: 16%;
            display: none;  
         }
-              
+
+/* ---------------- checkFuture --------------------  */
+
+ #checkFuture{
+           position: absolute;
+           background-color:#ebebeb; 
+           top:18%;
+           width: 100%;
+           height: 16%;
+           display: none;  
+        }
+
+
  /* ---------------- header2 --------------------  */             
 
 .header2{ 
@@ -829,7 +841,7 @@ input:checked + .slider:before {
               
     .header2_buts{
             position: absolute;
-            width: 60%;
+            width: 90%;
             height: 12%;
             left: 5%;
             top: 5%;
@@ -841,7 +853,7 @@ input:checked + .slider:before {
             position: absolute;
             left: 0px;
             top: 0px;
-            width: 30%;
+            width: 22%;
             height: 100%;
             background-color: #3b455f;
             
@@ -855,11 +867,11 @@ input:checked + .slider:before {
         .wearBut{
             font-family: MontserratRegular;
             position: absolute;
-            right: 0px;
+            right: 26%;
             left: 0px;
             top: 0px;
             margin: auto;
-            width: 30%;
+            width: 22%;
             height: 100%;
             background-color: #3b455f;
              color: #ebebeb;
@@ -872,9 +884,9 @@ input:checked + .slider:before {
         .travelBut{
             font-family: MontserratRegular;
             position: absolute;
-            right: 0px;
+            right: 26%;
             top: 0px;
-            width: 30%;
+            width: 22%;
             height: 100%;
             background-color: #3b455f;
             color: #ebebeb;
@@ -884,12 +896,29 @@ input:checked + .slider:before {
             text-align: center;
             z-index: 2;
         }
+.futureBut{
+            font-family: MontserratRegular;
+            position: absolute;
+            right: 0px;
+            top: 0px;
+            width: 22%;
+            height: 100%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+            
+}
         .weatherBut_clicked{
+       
             font-family: MontserratRegular; 
             position: absolute;
             left: 0px;
             top: 0px;
-            width: 30%;
+            width: 22%;
             margin-top: -20px; 
             height: 140%;
             background-color: #ebebeb;
@@ -900,15 +929,34 @@ input:checked + .slider:before {
             cursor: pointer;
             text-align: center;
             z-index: 2;
+
         }
         .wearBut_clicked{
+
             font-family: MontserratRegular;
             position: absolute;
-            right: 0px;
+            right: 26%;
             left: 0px;
             top: 0px;
             margin: auto;
-            width: 30%;
+            width: 22%;
+            margin-top: -20px; 
+            height: 140%;
+            background-color: #ebebeb;
+             color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+
+        }
+        .travelBut_clicked{
+            font-family: MontserratRegular;
+            position: absolute;
+           right: 26%;
+            top: 0px;
+            width: 22%;
             margin-top: -20px; 
             height: 140%;
             background-color: #ebebeb;
@@ -919,12 +967,12 @@ input:checked + .slider:before {
             text-align: center;
             z-index: 2;
         }
-        .travelBut_clicked{
+       .futureBut_clicked{
             font-family: MontserratRegular;
             position: absolute;
-            right: 0px;
+           right: 0px;
             top: 0px;
-            width: 30%;
+            width: 22%;
             margin-top: -20px; 
             height: 140%;
             background-color: #ebebeb;
@@ -954,6 +1002,12 @@ input:checked + .slider:before {
             margin-top: -20px; 
             height: 142%;  
         }    
+          .futureBut:hover {
+            background-color: #ebebeb;
+            color: black;
+            margin-top: -20px; 
+            height: 142%;  
+        }  
         
     /* ---------------- header2 --------------------  */       
         .header2_footer{
