--- a/main/css/style.css
+++ b/main/css/style.css
@@ -1819,5 +1819,435 @@ input:checked + .slider:before {
 }
 }
 
+/*        temperDiv_Future     */
 
+#temperDiv_Future{
+            position: absolute;
+            right: 20%;
+            top: 10%;
+           
+            margin: auto;
+            width: 60%;
+            height: 80%; 
+}
+
+ #temperDiv1_Future{
+           position: absolute;
+           top:0;
+           width: 100%;
+           height: 15%;
+           border-bottom: 5px solid #000;  
+        }
+          #temperDiv2_Future{
+           position: absolute;
+           top:15%;
+           width: 100%;
+           height: 15%;
+           border-bottom: 5px solid #000;
+        }
+          #temperDiv3_Future{
+           position: absolute;
+           top:30%;
+           width: 100%;
+           height: 15%;
+           border-bottom: 5px solid #000;
+        }
+          #temperDiv4_Future{
+           position: absolute;
+           top:45%;
+           width: 100%;
+           height: 15%;
+           border-bottom: 5px solid #000;  
+        }
+          #temperDiv5_Future{
+           position: absolute;
+           top:65%;
+           width: 100%;
+           height: 35%;
+/*           border-bottom: 6px solid #000;  */
+        }
+        .temperP_Future{
+            position: absolute;
+            bottom:-10px;
+            font-size: 20px;
+            font-family: RobotoThin;
+            font-weight: bold;
+        }
+.temperNum_Future{
+            position: absolute;
+            bottom:-10px;
+            font-size: 20px;;
+            right: 15px;
+            right: 15px;
+            font-family: MontserratRegular;
+        }
+
+ #wearDiv1_Future{
+           position: absolute;
+           top:20%;
+           width: 120px;
+           height:100px;
+      
+        }
+          #wearDiv2_Future{
+           position: absolute;
+           top:20%;
+           width: 20%;
+           height:100px;
+            left: 20%;    
+        
+        }
+          #wearDiv3_Future{
+           position: absolute;
+           top:20%;
+            width: 20%;
+           height:100px;
+            left: 40%;     
+          
+        
+        }
+          #wearDiv4_Future{
+            position: absolute;
+           top:20%;
+            width: 20%;
+           height:100px;
+            left: 60%; 
+         
+        }
+          #wearDiv5_Future{
+            position: absolute;
+           top:20%;
+            width: 20%;
+           height:100px;
+            left: 80%; 
+        }
+
+
+.wearP_Future{
+            font-family: RobotoThin;
+            font-weight: bold;
+            position: absolute;
+            bottom:0;
+            font-size: 20px;
+            left:0;
+            right: 0;
+            margin: auto;
+            width: 110px;
+            height: 30px;
+            text-align: center;
+        }
+.wearicon_Future
+        {
+            position: absolute;
+            background-image: url("");
+            background-size: 50px;
+            background-repeat: no-repeat;
+            width: 50px;
+            height: 50px;
+            top:0;
+            left:0;
+            right: 0;
+            margin: auto;
+            -webkit-transition-duration:0.1s;
+        }
+
+.wearicon_Future:hover{
+           transform:scale(1.2);
+           }
+
+ #outwearIcon_Future{
+           background-image: url("../img/wearIcon/accessories.png");  
+        } 
+        #shirtIcon_Future{
+             background-image: url("../img/wearIcon/shirt-man.png");
+        }  
+        #pantsIcon_Future{
+             background-image: url("../img/wearIcon/pants.png");
+        }  
+        #shoesIcon_Future{
+             background-image: url("../img/wearIcon/shoes-man.png");
+        }  
+        #accessoriesIcon_Future{
+             background-image: url("../img/wearIcon/umbrella.png");
+        } 
+
+.switch2 {
+  position: absolute;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  z-index: 1;
+  right: 0;
+    left: 0;
+    margin: auto;
+  bottom: 20px;    
+    
+}
+
+.switch2 input {display:none;}
+
+.slider2 {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  -webkit-transition: .4s;
+  transition: .4s;
+ 
+}
+
+.slider2:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: gainsboro;
+  -webkit-transition: .4s;
+  transition: .4s;
+   background-image: url(../img/wearIcon/MIcon.png);  
+    background-size: cover;
+    background-repeat: no-repeat  
+}
+
+
+
+input:checked + .slider2 {
+  background-color: white;
+   
+}
+
+input:focus + .slider2 {
+  box-shadow: 0 0 1px white;
+}
+
+input:checked + .slider2:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+       background-image: url(../img/wearIcon/FIcon.png); 
+    background-size: cover;
+    background-repeat: no-repeat 
+}
+
+/* Rounded sliders */
+.slider2.round2 {
+  border-radius: 34px;
+}
+
+.slider2.round2:before {
+  border-radius: 50%;
+}
+
+
+.forecast_buts{
+     position: absolute;
+    width: 80%;
+    height: 10%;
+   background-color: #3b455f;
+    top:0;
+    right: 0;
+    margin: auto;
+    left: 0;
+}
+
+.forecast1{
+            font-family: MontserratRegular;
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+.forecast1:hover {
+            background-color: #ebebeb;
+            color: black;
+        }
+
+.forecast2{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 21.25%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+.forecast2:hover {
+            background-color: #ebebeb;
+            color: black;
+        }
+
+.forecast3{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 42.5%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+.forecast3:hover {
+            background-color: #ebebeb;
+            color: black;
+        }
+
+.forecast4{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 63.75%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+.forecast4:hover {
+            background-color: #ebebeb;
+            color: black;
+        }
+
+.forecast5{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 85%;
+            margin: auto;
+            width: 15%;
+            height: 100%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+.forecast5:hover {
+            background-color: #ebebeb;
+            color: black;
+        }
+
+.forecast1_clicked{
+       
+            font-family: MontserratRegular;
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #ebebeb;
+            color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+              
+        }
+
+.forecast2_clicked{
+       
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 21.25%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #ebebeb;
+            color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+              
+        }
+
+.forecast3_clicked{
+       
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 42.5%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #ebebeb;
+            color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+              
+        }
+
+.forecast4_clicked{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 63.75%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #ebebeb;
+            color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+
+.forecast5_clicked{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 85%;
+            margin: auto;
+            width: 15%;
+            height: 100%;
+            background-color: #ebebeb;
+            color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
 
